multi module load in single module start

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,24 @@
 
+
 <h1>{{title}}</h1>
-<nav>
-  <a routerLink="/ferdous-page">ferdous-page</a>
-</nav>
+
+<ul class="nav">
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/">Home</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/ferdous-page">ferdous-page</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/shaiful-page">shaiful-page</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/mother-page">mother-page</a>
+  </li>
+</ul>
+
+<br>
+<br>
 
 <router-outlet></router-outlet>
 
