--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,13 @@
     <a class="nav-link" routerLink="/">Home</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/ferdous-page">ferdous-page</a>
+    <a class="nav-link" routerLink="/dress-page">dress-page</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/shaiful-page">shaiful-page</a>
+    <a class="nav-link" routerLink="/book-page">book-page</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" routerLink="/mother-page">mother-page</a>
+    <a class="nav-link" routerLink="/parent-page">parent-page</a>
   </li>
 </ul>
 
