--- a/src/app/book-page/book-page.component.html
+++ b/src/app/book-page/book-page.component.html
@@ -1,5 +1,22 @@
+<form>
+  <p>Book form</p>
+  <div class="mb-3">
+    <label for="name" class="form-label">Name</label>
+    <input type="text" class="form-control" id="name">
+  </div>
+  <div class="mb-3">
+    <label for="writer" class="form-label">Writer</label>
+    <input type="text" class="form-control" id="writer">
+  </div>
+  <div class="mb-3">
+    <label for="description" class="form-label">description</label>
+    <textarea class="form-control" id="description" rows="3"></textarea>
+  </div>
 
-<button (click)="add('Book')">Add Book</button>
+  <button type="button" class="btn btn-primary" (click)="add('Book')">Add Book</button>
+</form>
+
+
 <br>
 <br>
 
@@ -7,7 +24,7 @@
 <h2>All Book list:</h2>
 <li *ngFor="let book of (bookList$ | async)">
   {{ book.id }} {{ book.name }}
-  <button  type="button" (click)="update(book)">update</button>
+  <button type="button" (click)="update(book)">update</button>
   <button type="button" (click)="remove(book)">Remove</button>
   <button type="button" (click)="favourite(book)">Favourite</button>
 </li>
