dress form added

--- a/src/app/dress-page/dress-page.component.html
+++ b/src/app/dress-page/dress-page.component.html
@@ -1,19 +1,19 @@
-<form>
+<form [formGroup]="dressFg">
   <p>Dress form</p>
   <div class="mb-3">
     <label for="name" class="form-label">Name</label>
-    <input type="text" class="form-control" id="name">
+    <input type="text" class="form-control"  formControlName="name" id="name">
   </div>
   <div class="mb-3">
     <label for="color" class="form-label">Color</label>
-    <input type="text" class="form-control" id="color">
+    <input type="text" class="form-control" formControlName="color" id="color">
   </div>
   <div class="mb-3">
     <label for="description" class="form-label">description</label>
-    <textarea class="form-control" id="description" rows="3"></textarea>
+    <textarea class="form-control" formControlName="description" id="description" rows="3"></textarea>
   </div>
 
-  <button type="button" class="btn btn-primary" (click)="add('Dress')">Add Dress</button>
+  <button type="button" class="btn btn-primary" (click)="saveDress()">Add Dress</button>
 </form>
 <br>
 <br>
@@ -21,7 +21,7 @@
 <button (click)="resetDressState()">reset Dress State</button>
 <h2>All Dress list:</h2>
 <li *ngFor="let dress of (dressList$ | async)">
-  {{ dress.id }} {{ dress.name }}
+  {{ dress.id }} {{ dress.name }} {{ dress.color }} {{ dress.description }}
   <button type="button" class="btn btn-primary" (click)="update(dress)">update</button>
   <button type="button" (click)="remove(dress)">Remove</button>
   <button type="button" (click)="favourite(dress)">Favourite</button>
@@ -31,6 +31,6 @@
 <br>
 
 <h2>Favourite Dress list:</h2>
-<li *ngFor="let fm of (favouriteDressList$ | async)">
-  {{ fm.id }} {{ fm.name }}
+<li *ngFor="let dress of (favouriteDressList$ | async)">
+  {{ dress.id }} {{ dress.name }} {{ dress.color }} {{ dress.description }}
 </li>
